@@ -25,7 +25,7 @@ if {[encoding system] != "utf-8"} {
 if {![info exists tk_version]} {package require Tk}
 wm withdraw .
 
-set version "2025-08-21"
+set version "2025-08-22"
 set script [file normalize [info script]]
 set title [file tail $script]
 set cwd [pwd]
@@ -456,6 +456,7 @@ set console 0;			# Valid values: 0=hide, 1=show
 
 set ctid [thread::create -joinable "
   package require Tk
+  package require tcl::chan::fifo2
   wm withdraw .
   wm title . \"$title - [mc l99]\"
   set font_size ${console.font.size}
@@ -510,7 +511,6 @@ ctsend {
     .txt yview moveto [lindex $py 0]
   }
 
-  set aid 0
   proc write {text} {
     .txt configure -state normal
     if {[string index $text 0] == "\r"} {
@@ -519,14 +519,12 @@ ctsend {
     }
     .txt insert end $text
     .txt configure -state disabled
-    # Prevent the console from freezing when
-    # flooded with incoming write requests
-    catch "after cancel $::aid"
-    set ::aid [after 100 {.txt see end}]
+    if {[winfo ismapped .]} {.txt see end}
   }
 
   proc show_hide {show} {
     if {$show} {
+      .txt see end
       if {$::geometry == ""} {
 	wm deiconify .
       } else {
@@ -543,7 +541,18 @@ ctsend {
     }
   }
 
+  lassign [::tcl::chan::fifo2] fdi fdo
+  thread::detach $fdo
+  fconfigure $fdi -blocking 0 -buffering line -translation lf
+  fileevent $fdi readable "
+    while {\[gets $fdi line\] >= 0} {write \"\$line\\n\"}
+  "
 }
+
+set fdo [ctsend "set fdo"]
+thread::attach $fdo
+fconfigure $fdo -blocking 0 -buffering line -translation lf
+interp alias {} ::cputs {} ::puts $fdo
 
 if {$console == 1} {
   set console.show 1
@@ -552,7 +561,6 @@ if {$console == 1} {
 
 # Write to console
 
-proc cputs {text} {thread::send -async $::ctid [list write $text\n]}
 proc cputi {text} {cputs "\[---\] $text"}
 proc cputw {text} {cputs "\[+++\] $text"}
 
@@ -587,13 +595,6 @@ foreach item {maps_folder themes_folder} {
   set value [set $item]
   if {![file isdirectory $value]} {error_message [mc e05 $value $item] exit}
 }
-
-# Set minimum required Java version
-# depending on whether MyTourbook has it's own Java environment
-
-set java_version_min 11
-if {![file exists [file dirname $mtb_cmd]/jre/bin/java.exe]} \
-  {set java_version_min 21}
 
 # Work around Oracle's Java wrapper "java.exe" issue:
 # Wrapper requires running within real Windows console,
@@ -638,6 +639,13 @@ if {!$rc} {
 
 if {$rc || $java_version == 0} \
   {error_message [mc e08 Java [get_shell_command $command] $result] exit}
+
+# Check minimum required Java version
+# depending on whether MyTourbook has it's own Java environment
+
+set java_version_min 11
+if {![file exists [file dirname $mtb_cmd]/jre/bin/java.exe]} \
+  {set java_version_min 21}
 if {$java_version < $java_version_min} \
   {error_message [mc e07 Java $java_string $java_version_min] exit}
 
@@ -1106,7 +1114,10 @@ checkbutton .output -text [mc c99] \
 	-variable console.show -command show_hide_console
 pack .output -expand 1 -fill x
 
-proc show_hide_console {} {ctsend "show_hide ${::console.show}"}
+proc show_hide_console {} {
+  update idletasks
+  ctsend "show_hide ${::console.show}"
+}
 show_hide_console
 
 # Map/Unmap events are generated by Windows only!
@@ -2282,7 +2293,7 @@ proc process_start {command process} {
 
   unset -nocomplain ::$process.eof
   fileevent $fd readable "
-    while {\[gets $fd line\] >= 0} {
+    if {\[gets $fd line\] >= 0} {
       cputs \"\\$mark \$line\"
     }
     if {\[eof $fd\]} {
